--- a/tox.ini
+++ b/tox.ini
@@ -32,14 +32,13 @@ commands =
 [testenv:lint]
 deps =
     isort
-    black==23.12.1
+    black>=23.12.0,<24
     snakefmt>=0.4.2
     codespell
     pycodestyle
     pylint
     mypy
     types-PyYAML
-    types-pkg-resources
 commands =
     isort --check-only --diff {[base]files}
     codespell --skip="*.xml" {[base]files} README.md CHANGELOG.rst
