--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
 [testenv:lint]
 deps =
     isort
-    black>=23.12.0,<24
+    black>=23.12.0
     snakefmt>=0.4.2
     codespell
     pycodestyle
