--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ testdeps =
 envlist =
     check-version
     lint
-    py{38,39,310,311,312}
+    py{310,311,312}
     functional
 
 
@@ -105,7 +105,6 @@ max-line-length = 100
 
 [gh-actions]
 python =
-  3.10: py310, lint
-  3.10: py310, coverage
+  3.10: py310, lint, coverage
   3.11: py311, check-packaging
   3.12: py312, docs
