--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,7 +127,8 @@ disable = [
     "unbalanced-tuple-unpacking",
     "unspecified-encoding",
     "consider-using-f-string",
-    "use-yield-from"
+    "use-yield-from",
+    "too-many-positional-arguments",
 ]
 
 [tool.pylint.format]
