--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
 [testenv:lint]
 deps =
     isort
-    black>=23.12.0
+    black==23.12.0
     snakefmt>=0.4.2
     codespell
     pycodestyle
@@ -85,11 +85,13 @@ allowlist_externals =
 
 [testenv:format]
 deps =
-    black==23.12.1
+    black==23.12.0
     isort
+    snakefmt>=0.4.2
 commands =
     isort {[base]files}
     black .
+    snakefmt .
 
 # E126 continuation line over-indented for hanging indent
 # E127: continuation line over-indented for visual indent
@@ -105,6 +107,6 @@ max-line-length = 100
 
 [gh-actions]
 python =
-  3.10: py310, lint, coverage
-  3.11: py311, check-packaging
+  3.10: py310, coverage
+  3.11: py311, lint, check-packaging
   3.12: py312, docs
