docs and other stuff (#1)
## Scope

I wanted to go hard and fully revive ArchNGV. However, there is a lot of fiddling to do since the departure of bb5 and JDC wants me to extract a circuit instead of building a new one. Thus, this restricts the scope of this PR to just minimal maintenance to at least pass CI and get the docs. 

- revive CI
- revive docs
- small updates to readme and docs
- improve imports in `pyproject.toml`
- ~~update imports in `input_data_builder.py`.~~
- pinned black at `23.12.0` because newer version were changing almost everything

## Bugfixes

Fix: #2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = { file = "LICENSE.txt" }
 authors = [
-  { name = "Blue Brain Project, EPFL" },
+    {name = "Blue Brain Project, EPFL"}
+]
+maintainers = [
+  { name = "Open Brain Institute" }
 ]
 dependencies = [
   "numpy>=1.22",
@@ -51,6 +54,7 @@ dynamic = ["version"]
 docs = [
   "sphinx-bluebrain-theme"
 ]
+
 all = [
   "ngv-ctools>=1.0.0",
   "Click>=7.0",
@@ -73,10 +77,10 @@ all = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/BlueBrain/ArchNGV"
-Repository = "https://github.com/BlueBrain/ArchNGV"
-Issues = "https://github.com/BlueBrain/ArchNGV/issues"
-Tracker = "https://github.com/BlueBrain/ArchNGV/issues"
+Homepage = "https://github.com/openbraininstitute/ArchNGV"
+Repository = "https://github.com/openbraininstitute/ArchNGV"
+Issues = "https://github.com/openbraininstitute/ArchNGV/issues"
+Tracker = "https://github.com/openbraininstitute/ArchNGV/issues"
 
 [project.scripts]
 ngv = "archngv.app.__main__:app"
@@ -123,7 +127,8 @@ disable = [
     "unbalanced-tuple-unpacking",
     "unspecified-encoding",
     "consider-using-f-string",
-    "use-yield-from"
+    "use-yield-from",
+    "too-many-positional-arguments",
 ]
 
 [tool.pylint.format]
