--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ testdeps =
 envlist =
     check-version
     lint
-    py{38,39,310,311,312}
+    py{310,311,312}
     functional
 
 
@@ -32,14 +32,13 @@ commands =
 [testenv:lint]
 deps =
     isort
-    black==23.12.1
+    black==23.12.0
     snakefmt>=0.4.2
     codespell
     pycodestyle
     pylint
     mypy
     types-PyYAML
-    types-pkg-resources
 commands =
     isort --check-only --diff {[base]files}
     codespell --skip="*.xml" {[base]files} README.md CHANGELOG.rst
@@ -86,11 +85,13 @@ allowlist_externals =
 
 [testenv:format]
 deps =
-    black==23.12.1
+    black==23.12.0
     isort
+    snakefmt>=0.4.2
 commands =
     isort {[base]files}
     black .
+    snakefmt .
 
 # E126 continuation line over-indented for hanging indent
 # E127: continuation line over-indented for visual indent
@@ -106,7 +107,6 @@ max-line-length = 100
 
 [gh-actions]
 python =
-  3.9: py39, lint
   3.10: py310, coverage
-  3.11: py311, check-packaging
+  3.11: py311, lint, check-packaging
   3.12: py312, docs
